feat: 엔티티 분리
도메인 엔티티와 DB 엔티티 분리